deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php-http-vars
    app.kubernetes.io/component: php-http-vars
    app.kubernetes.io/instance: php-http-vars
    app.kubernetes.io/name: php-http-vars
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.4-ubi8
  name: php-http-vars
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: php-http-vars
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: php-http-vars
        deploymentconfig: php-http-vars
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/MATCH_OPENSHIFT_NAMESPACE/php-http-vars@sha256:efc7cfb872c9d1485b1ed07f73664e950c59453c57d02f6a59889f6e1e64b0c9
        imagePullPolicy: Always
        name: php-http-vars
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
