service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/brunobenchimol/php-http-vars
    openshift.io/generated-by: OpenShiftWebConsole
  labels:
    app: php-http-vars
    app.kubernetes.io/component: php-http-vars
    app.kubernetes.io/instance: php-http-vars
    app.kubernetes.io/name: php-http-vars
    app.kubernetes.io/part-of: php-http-vars
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.4-ubi8
  name: php-http-vars
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: php-http-vars
    deploymentconfig: php-http-vars
  sessionAffinity: None
  type: ClusterIP
