route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: php-http-vars
    app.kubernetes.io/component: php-http-vars
    app.kubernetes.io/instance: php-http-vars
    app.kubernetes.io/name: php-http-vars
    app.openshift.io/runtime: php
    app.openshift.io/runtime-version: 7.4-ubi8
  name: php-http-vars
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: php-http-vars
    weight: 100
  wildcardPolicy: None
